# Geant4_full_prototype_sim

./: .gitignore  GlobalSetup.mac  README.md  null.d  pipepositions.txt  primaryGeneratorSetup.mac  runParticle.sh  run_all.sh  style.h  submitRunParticle.sh  verboseSetup.mac  visSetup_Simplex.mac
check_source/: CMakeLists.txt  FoCal_Main.cc
check_source/include/: Geometry.hh  Geometry.hh~  LookUpTable.hh  OpticalPhotonPhysics.hh  RootIO.hh  RunAction.hh  SteppingAction.hh  UserActionInitialization.hh  constants.hh  constants.hh~  usercommandline.hh
check_source/src/: EventAction.cc  Geometry.cc  Geometry.cc~  OpticalPhotonPhysics.cc  PrimaryGenerator.cc  PrimaryGenerator.cc~  RootIO.cc  RootIO.cc~  SteppingAction.cc  UserActionInitialization.cc  usercommandline.cc
macros/: PathFinder.cpp  ReadAlpideData.C  ReadHCALData.C  ReadPadData.C  layermax.txt
plots/: ADCcluster.cxx  full_focal.cxx  hitmaps.cxx  temp.cxx
source/: CMakeLists.txt  FoCal_Main.cc  FoCal_Main.cpp
source/include/: Analysis.hh  EventAction.hh  Geometry.hh  PrimaryGenerator.hh  constants.hh
source/src/: EventAction.cc  Geometry.cc  PrimaryGenerator.cc  RootIO.cc  RunAction.cc
